  * Update man pages. (Closes: #680053)
  * Add 36-python-multiarch.patch from Rico Tzschichholz to fix detection of
    python in multiarch paths using pkg-config.
  * Fix build failure with the Debian wheezy kernel which backports the drm
    subsystem from Linux 3.4. (Closes: #703358)
  * Drop build-dependency on bcc as it's not needed anymore.

 -- Felix Geyer <fgeyer@debian.org>  Sun, 31 Mar 2013 19:46:38 +0200

virtualbox (4.1.18-dfsg-2.1) experimental; urgency=low

  [ Stefan Lippers-Hollmann ]
  * Non-maintainer upload.
  * fix kernel module compilation against v3.6 and v3.7
    (closes: #691169, #696011, #696667, #696953, #698607)

 -- Daniel Baumann <daniel.baumann@progress-technologies.net>  Sat, 26 Jan 2013 17:55:16 +0100

virtualbox (4.1.18-dfsg-2) unstable; urgency=high

  [ John Paul Adrian Glaubitz ]
  * Include patch to fix virtual graphics device user
    vulnerability CVE-2013-0420. (Closes: #698292)

 -- Felix Geyer <debfx-pkg@fobos.de>  Sat, 19 Jan 2013 18:05:25 +0100

virtualbox (4.1.18-dfsg-1.1) unstable; urgency=high

  * Non-maintainer upload.
  * Fix cve-2012-3221: missing privilege check for task gate switches
    (closes: 690777).

 -- Michael Gilbert <mgilbert@debian.org>  Thu, 18 Oct 2012 14:20:28 -0400

virtualbox (4.1.18-dfsg-1) unstable; urgency=low

  * New upstream release.
    - Fixes host freezes with 64-bit guests on 32-bit hosts. (LP: #1012627)
    - Fixes odd permissions of files in shared folders. (LP: #1013368)
  * Drop 37-fix-unregister-netdevice.patch, fixed upstream.
  * Compress orig tarball and binary packages with xz.

 -- Felix Geyer <debfx-pkg@fobos.de>  Thu, 21 Jun 2012 12:31:17 +0200

virtualbox (4.1.16-dfsg-2) unstable; urgency=low

  * Fix vboxnet device unregistration on kernel >= 3.2.18. (LP: #1009156)
    - Add 37-fix-unregister-netdevice.patch, backported from upstream.
  * Switch from python-central to dh_python2. (Closes: #617143)

 -- Felix Geyer <debfx-pkg@fobos.de>  Sun, 10 Jun 2012 21:32:09 +0200
