@@ -23,6 +23,8 @@ virtualbox (4.2.10-dfsg-1) experimental; urgency=low
   * Fix build failure with the Debian wheezy kernel which backports the drm
     subsystem from Linux 3.4. (Closes: #703358)
   * Drop build-dependency on bcc as it's not needed anymore.
+  * Link VBoxOGL against the X libraries it requires.
+    - Update 18-system-xorg.patch
 
  -- Felix Geyer <fgeyer@debian.org>  Sun, 31 Mar 2013 19:46:38 +0200
 
